[package]
name = "cube_thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=[
    "crates/*",
]

[dependencies]
sc-core = {path = "crates/core"}
sc-render = {path = "crates/render"}
sc-app = {path = "crates/app"}
sc-prelude = {path = "crates/prelude"}