[package]
name = "cube_thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=[
    "crates/*",
]

[dependencies]
sc-core = {path = "crates/core"}
sc-game = {path = "crates/game"}
sc-prelude = {path = "crates/prelude"}