[package]
name = "core-obj"
version = "0.1.0"
edition = "2021"
description = "Abstract Core Types."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = { path = "../prelude" }
serde = { version = "1.0.193" , features = ["derive"]}
vector3d = "0.2.1"
