[package]
name = "sc-registrar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
world-db = { path = "../world-db" }
world-protocol = { path = "../world-protocol" } #weak dependency
prelude = {path = "../prelude"}
core-obj = {path = "../core-obj"}
oneshot = "0.1.6"
fxhash = "0.2.1"
serde = { version = "1.0.193", features = ["derive"] }
