[package]
name = "world-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = {path = "../prelude"}
core-obj = { path = "../core-obj"}
async-trait = "0.1.74"
serde = {version = "1.0.193", features = ["derive"]}

#Implimentation
rustc-hash = "1.1.0"
chashmap-async = "0.1.1"

#Disk
tokio = {version = "1.36.0", features = ["fs","sync","rt","io-util","macros"], optional = true}
tokio-stream = { version = "0.1.14" , optional = true}
bincode = { version = "1.3.3" , optional = true}
tempfile = { version = "3.8.1" , optional = true}
itertools = { version = "0.12.0" , optional = true}


[features]
default = []
impl = [] #Implimentation
disk = ["impl","dep:tokio","dep:tokio-stream","dep:tempfile","dep:bincode","dep:itertools"]