[package]
name = "world-protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prelude = {path = "../prelude"}
core-obj = {path = "../core-obj"}
async-trait = "0.1.74"
serde = { version = "1.0.193", features = ["derive"] }
