[package]
name = "sc-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sc-prelude = { path = "../prelude" }
dyn-clone = "1.0.13"
lazy_static = "1.4.0"
thiserror = "1.0.47"
paste = "1.0.14"
async-trait = "0.1.73"
rustc-hash = "1.1.0"
crossbeam-channel = "0.5.8"
flume = "0.11.0"
ndarray = "0.15.6"


[dev-dependencies]
rstest = "0.18.1"
