[package]
name = "sc-plugin-runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fp-bindgen-support = {version = "3.0.0", features = ["wasmer2_host"]}
prelude = {path = "../../prelude"}
wasmer = "4.2.1"
